@@ -1,6 +1,7 @@
 package egovframework.com.cmm.web;
 
 import java.beans.PropertyEditorSupport;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
@@ -10,28 +11,26 @@ import org.slf4j.LoggerFactory;
 class EgovAtchFileIdPropertyEditor extends PropertyEditorSupport {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(EgovAtchFileIdPropertyEditor.class);
-	
+
+	@Override
 	public void setAsText(String text) throws IllegalArgumentException {
 		LOGGER.debug("===>>> setText : "+text);
 		String decryptText = "";
 		if (text != null && !"".equals(text) ) {
-			try {
-				String encText = URLEncoder.encode(text, StandardCharsets.UTF_8.name());
+			// 2026.02.28 KISA 취약점 조치
+				String encText = URLEncoder.encode(text, StandardCharsets.UTF_8); // Charset 객체 직접 사용 (Java 10+)
 				decryptText = EgovFileMngController.decrypt(encText);
-			} catch (Exception e) {
-				LOGGER.debug(e.getMessage());
-				decryptText = "FILE_ID_DECRIPT_EXCEPTION_01";
-			}
 		}
 		this.setValue(decryptText);
 
 	}
 
 
+	@Override
 	public String getAsText() {
 		LOGGER.debug("===>>> getText : "+getValue());
 		return String.valueOf(getValue());
 
-	}		
+	}
 
 }
